--- a/style.css
+++ b/style.css
@@ -1,102 +1,109 @@
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+    text-decoration: 0;
     font-family: sans-serif;
     font-size: 14px;
 }
 
-body {
-    width: 100%;
+body{
+    background-color: rgb(243,243,243);
     min-height: 100vh;
-    background-color: rgb(243, 243, 243);
+    width: 100%;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
 }
 
-.instagram-wrapper {
+.container-pai{
     display: flex;
     align-items: center;
     justify-content: start;
-    width: 60%;
+    width: 40%;
     height: 100vh;
 }
 
-.instagram-phone {
+.cel-instagram{
     display: flex;
     align-items: center;
     justify-content: center;
     width: 50%;
 }
 
-.instagram-phone img {
+.cel-instagram img{
     height: 50rem;
 }
 
-.instagram-continue {
+.conta{
     display: flex;
-    align-items: center; /* horizontal */
-    justify-content: space-around; /* vertical */
     flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     width: 50%;
     min-height: 34rem;
 }
 
-.group {
+.semelhantes{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     flex-direction: column;
-    background-color: #ffffff;
+    align-items: center;
+    justify-content: space-between;
     width: 100%;
-    padding: 1.3rem 0;
-    border: 1px solid lightgray;
+    background-color: white;
+    border: 1px solid lightgray
 }
 
-.group:nth-child(1) {
+.semelhantes:nth-child(1){
     min-height: 19rem;
 }
 
-.instagram-logo {
-    height: 3rem;
+.semelhantes:nth-child(2){
+    min-height: 4.5rem;
 }
 
-.profile-photo {
+.logo img{
+    height: 3.6rem
+}
+
+.perfil{
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     border-radius: 50%;
     overflow: hidden;
 }
 
-.profile-photo img {
+.perfil img{
     height: 6rem;
 }
 
-.instagram-login {
+.continue{
     background-color: #0095f6;
-    color: #ffffff;
-    padding: 8px;
-    border-radius: 4px;
+    padding: 0.6rem;
+    border-radius: 0.3rem;
 }
 
-.instagram-logout {
-    color: #0095f6;
+.continue a{
+    color: #ffffff
+}
+
+.remover{
     margin-top: 1rem;
 }
 
-.not-account {
+.remover a{
+    color:#0095f6
+}
+
+.semelhantes p{
     color: rgb(160, 160, 160);
 }
 
-.link-blue {
+.links{
     color: #0095f6;
 }
-
-.get-the-app {
+.download{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -105,55 +112,40 @@ body {
     padding: 1.3rem 0;
 }
 
-.download {
+.baixar{
+    color: black;
+}
+
+.links-app{
     display: flex;
-    width: 100%;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
     padding: 1rem;
 }
 
-.app-download {
-    height: 3rem;
-    width: 10rem;
-    background-size: cover;
+.app-download img{
+    height: 2.8rem;
+    width: 9.6rem;
 }
 
-.app-download:nth-child(1) {
-    background-image: url('./img/apple-button.png');
-}
-
-.app-download:nth-child(2) {
-    background-image: url('./img/googleplay-button.png');
-}
-
-/* media queries */
-
-
-@media (max-width: 1024px) {
-    .instagram-wrapper {
-        width: 90%;
-    }
-}
-
-@media (max-width: 650px) {
-    body {
-        background-color: #ffffff;
+@media (max-width: 650px){
+    .container-pai{
+        width:90%;
     }
 
-    .instagram-wrapper {
-        width: 90%;
-    }
-
-    .instagram-phone {
+    .cel-instagram{
         display: none;
     }
-
-    .instagram-continue {
-        width: 100%;
-    }
     
-    .group {
-        border: 1px solid transparent;
+    .conta{
+        width: 100%
     }
 }
+
+@media (max-width: 1024px){
+    .container-pai{
+        width:90%;
+    }
+}
+
